<resources>
    <string name="app_name">BanHang</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="register">Don\'t have an account! <u>Register</u>?</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name">Name</string>
    <string name="sign_up">Đăng Ký</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="have_an_account_login">Have an account! Login</string>
    <string name="currency_unit_float">%f Đ</string>
    <string name="currency_unit_integer">%d Đ</string>
    <string name="log_out">Đăng Xuất</string>
    <string name="search_hint">Tìm kiếm</string>
</resources>
